--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <version>1.3</version>
         </dependency>
         <dependency>
+            <groupId>com.nebhale.jsonpath</groupId>
+            <artifactId>jsonpath</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
